# test

./: CMakeLists.txt  Makefile  checker  push_swap
includes/: ft_pushswap.h
libft/: Makefile  author
libft/includes/: ft_printf.h  libft.h
libft/srcs/ft_lists/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpush.c
libft/srcs/ft_mem/: ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
libft/srcs/ft_over/: ft_atoi.c  ft_bzero.c  ft_freesplit.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_tolower.c  ft_toupper.c  get_next_line.c
libft/srcs/ft_printf/: flagidiux.c  flagifo.c  ft_itua_e.c  ft_printchar.c  ft_printf.c  ft_printfl.c  ft_printnbr.c  ft_printnbro.c  ft_printstr.c  ft_printx.c  general.c  itua.c  over.c  parseng.c  printf.c  spec.c
libft/srcs/ft_str/: ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
srcs/: answer.c  answer1.c  answer2.c  checker.c  logik1.c  logik2.c  logik3.c  logik4.c  maindop.c  push_swap.c  sort1.c  sort2.c  sort3.c  stack_print.c
