cmake_minimum_required(VERSION 3.14)
project(checker C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(checker
		includes/ft_pushswap.h
		libft/includes/ft_printf.h
		libft/includes/libft.h
		libft/srcs/ft_lists/ft_lstadd.c
		libft/srcs/ft_lists/ft_lstdel.c
		libft/srcs/ft_lists/ft_lstdelone.c
		libft/srcs/ft_lists/ft_lstiter.c
		libft/srcs/ft_lists/ft_lstmap.c
		libft/srcs/ft_lists/ft_lstnew.c
		libft/srcs/ft_lists/ft_lstpush.c
		libft/srcs/ft_mem/ft_memalloc.c
		libft/srcs/ft_mem/ft_memccpy.c
		libft/srcs/ft_mem/ft_memchr.c
		libft/srcs/ft_mem/ft_memcmp.c
		libft/srcs/ft_mem/ft_memcpy.c
		libft/srcs/ft_mem/ft_memdel.c
		libft/srcs/ft_mem/ft_memmove.c
		libft/srcs/ft_mem/ft_memset.c
		libft/srcs/ft_over/ft_atoi.c
		libft/srcs/ft_over/ft_bzero.c
		libft/srcs/ft_over/ft_freesplit.c
		libft/srcs/ft_over/ft_isalnum.c
		libft/srcs/ft_over/ft_isalpha.c
		libft/srcs/ft_over/ft_isascii.c
		libft/srcs/ft_over/ft_isdigit.c
		libft/srcs/ft_over/ft_isprint.c
		libft/srcs/ft_over/ft_itoa.c
		libft/srcs/ft_over/ft_putchar.c
		libft/srcs/ft_over/ft_putchar_fd.c
		libft/srcs/ft_over/ft_putendl.c
		libft/srcs/ft_over/ft_putendl_fd.c
		libft/srcs/ft_over/ft_putnbr.c
		libft/srcs/ft_over/ft_putnbr_fd.c
		libft/srcs/ft_over/ft_putstr.c
		libft/srcs/ft_over/ft_putstr_fd.c
		libft/srcs/ft_over/ft_read_file.c
		libft/srcs/ft_over/ft_tolower.c
		libft/srcs/ft_over/ft_toupper.c
		libft/srcs/ft_over/get_next_line.c
		libft/srcs/ft_printf/flagidiux.c
		libft/srcs/ft_printf/flagifo.c
		libft/srcs/ft_printf/ft_itua_e.c
		libft/srcs/ft_printf/ft_printchar.c
		libft/srcs/ft_printf/ft_printf.c
		libft/srcs/ft_printf/ft_printfl.c
		libft/srcs/ft_printf/ft_printnbr.c
		libft/srcs/ft_printf/ft_printnbro.c
		libft/srcs/ft_printf/ft_printstr.c
		libft/srcs/ft_printf/ft_printx.c
		libft/srcs/ft_printf/general.c
		libft/srcs/ft_printf/itua.c
		libft/srcs/ft_printf/over.c
		libft/srcs/ft_printf/parseng.c
		libft/srcs/ft_printf/printf.c
		libft/srcs/ft_printf/spec.c
		libft/srcs/ft_str/ft_strcat.c
		libft/srcs/ft_str/ft_strchr.c
		libft/srcs/ft_str/ft_strclr.c
		libft/srcs/ft_str/ft_strcmp.c
		libft/srcs/ft_str/ft_strcpy.c
		libft/srcs/ft_str/ft_strdel.c
		libft/srcs/ft_str/ft_strdup.c
		libft/srcs/ft_str/ft_strequ.c
		libft/srcs/ft_str/ft_striter.c
		libft/srcs/ft_str/ft_striteri.c
		libft/srcs/ft_str/ft_strjoin.c
		libft/srcs/ft_str/ft_strlcat.c
		libft/srcs/ft_str/ft_strlen.c
		libft/srcs/ft_str/ft_strmap.c
		libft/srcs/ft_str/ft_strmapi.c
		libft/srcs/ft_str/ft_strncat.c
		libft/srcs/ft_str/ft_strncmp.c
		libft/srcs/ft_str/ft_strncpy.c
		libft/srcs/ft_str/ft_strnequ.c
		libft/srcs/ft_str/ft_strnew.c
		libft/srcs/ft_str/ft_strnstr.c
		libft/srcs/ft_str/ft_strrchr.c
		libft/srcs/ft_str/ft_strsplit.c
		libft/srcs/ft_str/ft_strstr.c
		libft/srcs/ft_str/ft_strsub.c
		libft/srcs/ft_str/ft_strtrim.c
		srcs/answer.c
		srcs/answer1.c
		srcs/answer2.c
		srcs/logik1.c
		srcs/logik2.c
		srcs/logik3.c
		srcs/logik4.c
		srcs/maindop.c
		srcs/push_swap.c
		srcs/sort1.c
		srcs/sort2.c
		srcs/sort3.c
		srcs/stack_print.c)
